--- a/dbt/dbt_airflow_dag_test/profiles.yml
+++ b/dbt/dbt_airflow_dag_test/profiles.yml
@@ -1,15 +1,13 @@
-app:
-  target: dev
+dbt_airflow_dag_test:
   outputs:
     dev:
+      account: YTA10127-TRIGGO_PARTNER
+      database: AIRFLOW_DB
+      password: dPmaH8k2HzM1*!
+      role: AIRFLOW_ADMIN_RL
+      schema: AIRFLOW_DBT
+      threads: 1
       type: snowflake
-      account: "{{ env_var('dbt_snowflake_account') }}"
-
-      # User/password auth
-      user: "{{ env_var('dbt_user') }}"
-      password: "{{ env_var('dbt_password') }}"
-      role: "{{ env_var('dbt_role') }}"
-      database: "{{ env_var('dbt_database') }}"
-      schema: "{{ env_var('dbt_schema') }}"
-      warehouse: "{{ env_var('dbt_warehouse') }}"
-      client_session_keep_alive: False
+      user: GABRIELTERCEIRO
+      warehouse: AIRFLOW_WH
+  target: dev
